--- a/main.css
+++ b/main.css
@@ -1,23 +1,52 @@
+body {
+    margin: 0;
+    font-family: "Zen Maru Gothic", serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 15px;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+li{
+    display: inline;
+}
+
+img {
+	user-drag: none;
+	-webkit-user-drag: none;
+	-moz-user-select: none;
+}
+
 .title {
-    text-align: center;
+    float: left;
+    font-size: 15px;
+    margin-top: 5px;
+    margin-left: 5px;
+    color: rgb(19, 53, 204);
 }
 
 .loginButton {
     float: right;
-    margin-top: 30px;
+    margin-top: 5px;
 }
 
 .head {
     position: fixed;
     width: 100%;
+    z-index: 1000;
+    background-color: #fff;
 }
 
 .body {
-    padding-top: 70px;
+    padding-top: 30px;
 }
 
 .tab {
-    max-width: 800px;
+    max-width: 1500px;
     margin: 0 auto;
     margin-top: 10px;
 }
@@ -30,6 +59,7 @@
     min-height: 50px; /* メニュー切替時にタブがズレないように */
     padding: 0;
     margin: 0;
+    font-size: 15px;
 }
 
 .tab__menu-item {
@@ -62,7 +92,6 @@
 }
 
 .tab__panel-box {
-    min-height: 400px; /* テキスト量が多くなっても対応できるように */
     padding: 10px 30px;
     border-radius: 10px;
 }
@@ -84,20 +113,31 @@
 
 .itemButton {
     width: auto;
+    height: auto;
     border: 0;
     border-radius: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
 }
 
 .noClick {
     background-color: #ffffff;
+    opacity: 0.5;
 }
 
 .isClick {
-    background-color: #fbff0061;
+    background-color: #ffffff;
+    opacity: 1;
 }
 
 .itemImg {
- width: 75px;
+    width: 75px;
+}
+
+.cardItemImg {
+    width: 75px;
+    padding-top: 4px;
 }
 
 .tooltip1{
@@ -105,10 +145,12 @@
     cursor: pointer;
     display: inline-block;
 }
+
 .tooltip1 p{
     margin:0;
     padding:0;
 }
+
 .description1 {
     display: none;
     position: absolute;
